package tabletop.common.dnd5e.character


abstract class Feature
